mp-metrics-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp-metrics
  labels:
    app: mp-metrics
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: mp-metrics
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mp-metrics-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mp-metrics
        version: v1
    spec:
      containers:
      - name: mp-metrics
        image: mp-metrics
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mp-metrics
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /metrics
        backend:
          serviceName: mp-metrics
          servicePort: 8080
      - path: /mp-metrics
        backend:
          serviceName: mp-metrics
          servicePort: 8080
---
